[B][COLOR gold]v1.9.25[/COLOR][/B]
- Minor code updates

[B][COLOR gold]v1.9.24[/COLOR][/B]
- Trigger 'Clean settings file' function on add-on startup after update, to fix issue with scraping

[B][COLOR gold]v1.9.23[/COLOR][/B]
- Fixed episodes order when 'Flatten seasons' is enabled
- Appended relevant icon (imdb/trakt) on user lists & sorted them by site/name

[B][COLOR gold]v1.9.22[/COLOR][/B]
- Added IMDb watchlist/user lists sorting options
- Added support for more content types for IMDb watchlist/user lists

[B][COLOR gold]v1.9.21[/COLOR][/B]
- Fixed seasons/episodes sort order (another regression from the tvdb fiasko)
- Added AppleTV+ to Networks

[B][COLOR gold]v1.9.20[/COLOR][/B]
- Added option to include/exclude special episodes when adding shows to Kodi library

[B][COLOR gold]v1.9.18[/COLOR][/B]
- Fixed TV calendar

[B][COLOR gold]v1.9.17[/COLOR][/B]
- Re:fix tvdb

[B][COLOR gold]v1.9.16[/COLOR][/B]
- Added "Clean Settings file" options on Tools menu for TheOath & Oathscrapers
    *removes obsolete settings entries from add-on's addon_data settings.xml, to
     increase speed and reduce log spamming.
     Main code function taken from Fen (thanks), adjusted for TheOath

[B][COLOR gold]v1.9.14[/COLOR][/B]
- Adjusted to TheTVDB API changes for tv shows to work
    *season posters, some meta and show posters for trakt-based lists (eg People Watching,
     TV Show Mosts etc) still don't get fetched
- Added Disney+ to Networks

[B][COLOR gold]v1.9.13[/COLOR][/B]
- Replaced buggy "Resume" context menu dialog with a yes/no dialog

[B][COLOR gold]v1.9.12[/COLOR][/B]
- orionoid adjustments
- Bypass old (deleted) tmdb key if still stored in addon_data settings.xml

[B][COLOR gold]v1.9.10[/COLOR][/B]
- Added some dead hosts to the 'block' dict

[B][COLOR gold]v1.9.9[/COLOR][/B]
- Replaced API keys
    (it seems that some folks forked/cloned TheOath but didn't bother replacing my API keys.
     Now the old ones have been deleted)

[B][COLOR gold]v1.9.7[/COLOR][/B]