@@ -1,3 +1,6 @@
+[B][COLOR gold]v1.9.26[/COLOR][/B]
+- Settings fix
+
 [B][COLOR gold]v1.9.25[/COLOR][/B]
 - Minor code updates
 
